qICSeek v0.1 - CHANGELOG added

--- a/FinalSet/Webpage/index.html
+++ b/FinalSet/Webpage/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="navbar-collapse collapse">
            <div class="custom-search input-group">
-              <input id="searchText" type="text" class="form-control" autocomplete="off">
+              <input id="searchText" type="text" class="form-control" autocomplete="off"></input>
               <span class="input-group-btn">
                 <button id="searchButton" class="btn btn-success search-button" type="button">Search</button>
               </span>
@@ -52,7 +52,7 @@
         </div><!--/.navbar-collapse -->
       </div>
     </div>
-
+    <hr>
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
@@ -61,7 +61,6 @@
         </div>
       </div>
 
-      <hr>
     </div> <!-- /container -->
 
 
