Updated index with positions, using positions in ranking, updated scripts.

--- a/FinalSet/Webpage/index.html
+++ b/FinalSet/Webpage/index.html
@@ -38,6 +38,8 @@
             <vr></vr>
             <label>Ranking :&nbsp;</label>
             <select id="rankTypeSelect">
+              <option value='cosine-position-pg-tf-idf'>Secret sauce</option>
+              <option value='cosine-pg-tf-idf'>Cosine, tf-idf * pr</option>
               <option value='cosine'>Cosine similarity</option>
               <option value='tf-idf'>TF-IDF</option>
             </select>
