NDCG added. Search Metrics and results animation added.

--- a/FinalSet/Webpage/index.html
+++ b/FinalSet/Webpage/index.html
@@ -65,7 +65,8 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-          <h2>Your ICS search results will appear here!</h2>  
+          <div id='searchResults' class="col-md-9"><h2>Your ICS search results will appear here!</h2></div>
+          <div id='searchMetrics' class="col-md-3"></div>      
       </div>
 
     </div> <!-- /container -->
