Added busy indicator

--- a/FinalSet/Webpage/index.html
+++ b/FinalSet/Webpage/index.html
@@ -38,6 +38,9 @@
               <option value='tf-idf'>TF-IDF</option>
             </select>
           </div>
+          <div class='search-option'>
+            <img src="images/ajax-loader.gif"/>
+          </div> 
         </div>
         
         <div class="navbar-collapse collapse">
